// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots Block Block with Markdown 1`] = `
<div
  class="h-full"
>
  <div>
    <header
      class="lck-color-title p-mb-2"
    >
      
    Futur Markdown
  
    </header>
     
    <div
      class="lck-color-content"
    >
      
  En cours d'implémentation

    </div>
  </div>
</div>
`;

exports[`storyshots Block Block with Paragraph (Text) 1`] = `
<div
  class="h-full"
>
  <div>
    <header
      class="lck-color-title p-mb-2"
    >
      
    Titre
  
    </header>
     
    <div
      class="lck-color-content"
    >
      
  Je suis un texte.

    </div>
  </div>
</div>
`;

exports[`storyshots Block Block with TableView 1`] = `
<div
  class="h-full"
>
  <div>
    <header
      class="lck-color-title p-mb-2"
    >
      
    My TableView's block
  
    </header>
     
    <div>
      <div
        class="p-datatable p-component"
      >
        <!---->
        <!---->
        <!---->
         
        <!---->
         
        <!---->
         
        <!---->
         
        <div
          class="p-datatable-wrapper"
        >
          <table
            role="grid"
          >
            <thead
              class="p-datatable-thead"
            >
              <tr />
               
              <!---->
            </thead>
             
            <tbody
              class="p-datatable-tbody"
            >
              <!---->
               
              <tr
                class=""
              />
               
              <!---->
               
              <!---->
              <!---->
               
              <tr
                class=""
              />
               
              <!---->
               
              <!---->
            </tbody>
             
            <!---->
          </table>
        </div>
         
        <!---->
         
        <!---->
         
        <div
          class="p-column-resizer-helper"
          style="display: none;"
        />
         
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Block Block with unknown type 1`] = `
<div
  class="h-full"
>
  <div>
    <header
      class="lck-color-title p-mb-2"
    >
      
    Not Known
  
    </header>
     
    <span
      class="lck-color-content"
    >
      
    Ce type de block NotKnown n'existe pas.
    </span>
  </div>
</div>
`;

exports[`storyshots Block Block without props 1`] = `
<div
  class="h-full"
>
  <div>
    <header
      class="lck-color-title p-mb-2"
    >
      
    
  
    </header>
     
    <span
      class="lck-color-content"
    >
      
    Le type de block n'existe pas.
  
    </span>
  </div>
</div>
`;
